<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="24dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/babyItem"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:hint="@string/enter_item"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/item_qty"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_below="@id/babyItem"
                android:hint="@string/enter_qty"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/item_color"
                android:layout_below="@id/item_qty"
                android:layout_width="match_parent"
                android:hint="@string/enter_color"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/item_size"
                android:layout_below="@id/item_color"
                android:inputType="number"
                android:layout_width="match_parent"
                android:hint="@string/enter_size"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_below="@id/item_size"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>


