<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/confirmation"
                android:layout_width="328dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="54dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:layout_marginEnd="52dp"
                android:background="@color/colorAccent"
                android:text="@string/text_sure"
                android:textAlignment="center" />

            <Button
                android:id="@+id/cofir_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmation"
                android:layout_alignParentStart="true"
                android:background="@android:color/holo_blue_bright"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/no_text" />

            <Button
                android:id="@+id/cofir_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_bright"
                android:layout_below="@+id/confirmation"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="37dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:text="@string/yes_text" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>